--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 lalrpop = "0.19.7"
 
 [dependencies]
+clap = { version = "4.1.8", features = ["derive"] }
 displaydoc = "0.2.3"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
 miette = { version = "5.5.0", features = ["fancy"] }
