--- a/compiler/curse_parse/Cargo.toml
+++ b/compiler/curse_parse/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 lalrpop = "0.19.7"
 
 [dependencies]
-lalrpop-util = { version = "0.19.7" }
+lalrpop-util = "0.19.7"
 curse_ast = { path = "../curse_ast" }
 logos = "0.12.1"
 miette = "5.6.0"
