--- a/compiler/curse_parse/Cargo.toml
+++ b/compiler/curse_parse/Cargo.toml
@@ -11,5 +11,5 @@ lalrpop-util = "0.19.7"
 curse_ast = { path = "../curse_ast" }
 logos = "0.12.1"
 miette = "5.6.0"
-displaydoc = "0.2.3"
 typed-arena = "2.0.2"
+thiserror = "1.0.39"
