hir + typeck start

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,6 @@
 members = [
     "compiler/curse_ast",
     "compiler/curse_parse",
-    "compiler/curse_hir",
-    "compiler/curse_interpreter"
+    # "compiler/curse_interpreter",
+    "compiler/curse_hir"
 ]
