--- a/compiler/curse_hir/Cargo.toml
+++ b/compiler/curse_hir/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 curse_ast = { path = "../curse_ast" }
+displaydoc = "0.2.3"
+thiserror = "1.0.40"
+typed-arena = "2.0.2"
+
+[dev-dependencies]
+curse_parse = { path = "../curse_parse" }
