--- a/compiler/curse_hir/Cargo.toml
+++ b/compiler/curse_hir/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 curse_ast = { path = "../curse_ast" }
 displaydoc = "0.2.3"
+miette = "5.7.0"
 petgraph = "0.6.3"
+smallvec = "1.10.0"
 thiserror = "1.0.40"
 typed-arena = "2.0.2"
 
