--- a/compiler/curse_interpreter/Cargo.toml
+++ b/compiler/curse_interpreter/Cargo.toml
@@ -9,4 +9,7 @@ miette = { version = "5.5.0", features = ["fancy"] }
 rustyline = "11.0.0"
 curse_parse = { path = "../curse_parse" }
 curse_ast = { path = "../curse_ast" }
+curse_hir = { path = "../curse_hir" }
 thiserror = "1.0.39"
+smallvec = "1.10.0"
+typed-arena = "2.0.2"
