Big big changes I forgot everything sorry

--- a/compiler/curse_hir/Cargo.toml
+++ b/compiler/curse_hir/Cargo.toml
@@ -11,6 +11,7 @@ petgraph = "0.6.3"
 smallvec = "1.10.0"
 thiserror = "1.0.40"
 typed-arena = "2.0.2"
+string-interner = "0.14.0"
 
 [dev-dependencies]
 curse_parse = { path = "../curse_parse" }
