--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [workspace]
 members = [
     "compiler/curse",
-    "compiler/curse_ast",
-    "compiler/curse_arena",
     "compiler/curse_parse",
-    "compiler/curse_hir"
+    "compiler/curse_ast",
+    "compiler/curse_ast_lowering",
+    "compiler/curse_hir",
+
+    "compiler/curse_mir",
+
+    "compiler/curse_arena",
+    "compiler/curse_interner",
+    "compiler/curse_span"
 ]
