--- a/compiler/curse_parse/Cargo.toml
+++ b/compiler/curse_parse/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "curse_parse"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2021"
 
 [build-dependencies]
@@ -9,7 +9,9 @@ lalrpop = "0.19.7"
 [dependencies]
 lalrpop-util = "0.19.7"
 curse_ast = { path = "../curse_ast" }
+curse_span = { path = "../curse_span" }
 logos = "0.13"
-miette = "5.6.0"
+miette = "5.9.0"
 typed-arena = "2.0.2"
 thiserror = "1.0.39"
+unicode-ident = "1.0.9"
