started interpreter; VERY MUCH IN PROGRESS

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ members = [
 
     "compiler/curse_arena",
     "compiler/curse_interner",
-    "compiler/curse_span"
+    "compiler/curse_span",
+
+    "compiler/curse_interpreter",
 ]
