--- a/compiler/curse_ast_lowering/Cargo.toml
+++ b/compiler/curse_ast_lowering/Cargo.toml
@@ -10,4 +10,5 @@ curse_interner = { path = "../curse_interner" }
 curse_span = { path = "../curse_span" }
 curse_hir = { path = "../curse_hir" }
 miette = "5.*"
+thiserror = "1.*"
 
