--- a/compiler/curse_ast_lowering/Cargo.toml
+++ b/compiler/curse_ast_lowering/Cargo.toml
@@ -5,10 +5,10 @@ edition = "2021"
 
 [dependencies]
 curse_ast = { path = "../curse_ast" }
-curse_arena = { path = "../curse_arena" }
 curse_interner = { path = "../curse_interner" }
 curse_span = { path = "../curse_span" }
 curse_hir = { path = "../curse_hir" }
 miette = "5.*"
 thiserror = "1.*"
+bumpalo = "3.13.0"
 
